# Lohalloc

./: .dockerignore  .env.example  .gitignore  CLA.md  Cargo.toml  LICENSE-COMMERCIAL  LICENSE-GPL  Makefile  README.md  STORY.md  package-lock.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: bench.yml
bench/: lohalloc-tune.balanced  lohalloc-tune.latency  lohalloc-tune.throughput  probe_perf.sh  run_native.sh  tune-grid.json
bench/graphs/: generate.sh  plot_report.py  plot_tune.py  requirements.txt
bench/native/: Makefile  bench_main.c  bench_main.cpp  workloads.c  workloads.h
crates/lohalloc-alloc/: Cargo.toml
crates/lohalloc-alloc/src/: arena.rs  bandit.rs  buddy.rs  buddy_mag.rs  clock.rs  hot.rs  lib.rs  magazine.rs  observer.rs  perfect_hash.rs  registry.rs  slab.rs  state.rs  system.rs  topology.rs  tune.rs
crates/lohalloc-bench/: Cargo.toml
crates/lohalloc-bench/benches/: backend_micro.rs  comparison.rs  context_gap.rs  hypothesis.rs  inference_overhead.rs  paradigm_gap.rs
crates/lohalloc-bench/src/: clockinfo.rs  forced.rs  global_alloc.rs  hypotheses.rs  lib.rs  workloads.rs
crates/lohalloc-bench/tests/: decision_plane.rs  paradigm_diag.rs  routing_validation.rs  tune_e2e.rs
crates/lohalloc-cabi/: Cargo.toml
crates/lohalloc-cabi/src/: lib.rs
crates/lohalloc-core/: Cargo.toml
crates/lohalloc-core/src/: lib.rs
crates/lohalloc-demo/: Cargo.toml
crates/lohalloc-demo/src/: main.rs
crates/lohalloc-example/: Cargo.toml
crates/lohalloc-example/src/: main.rs
crates/lohalloc-server/: Cargo.toml
crates/lohalloc-server/src/: lib.rs  main.rs  replay.rs  server.rs  simulation.rs  telemetry.rs
crates/lohalloc-server/tests/: replay_tests.rs  server_tests.rs
docker/: Dockerfile.bench  Dockerfile.linux-arm  Dockerfile.linux-x86
gui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx
gui/src/components/: AllocationFlow.tsx  CollapsedTopology.tsx  Constellations.tsx  ErrorBoundary.tsx  ExampleRunButtons.tsx  FloatingWeb.tsx  HeapMap.tsx  ModeToggle.tsx  PerfTraceView.tsx  PolicyMatrix.tsx  SimulationPanel.tsx  StrategyToggle.tsx  TelemetrySidebar.tsx  TraceUpload.tsx  TraceUploadModal.tsx
gui/src/components/__tests__/: AllocationFlow.test.tsx  App.freezeExport.test.tsx  App.integration.test.tsx  App.simulateButtons.test.tsx  App.test.tsx  CollapsedTopology.test.tsx  Constellations.test.tsx  ErrorBoundary.test.tsx  ExampleRunButtons.test.tsx  FloatingWeb.test.tsx  HeapMap.test.tsx  ModeToggle.test.tsx  PerfTraceView.test.tsx  PolicyMatrix.test.tsx  SimulationPanel.test.tsx  StrategyToggle.test.tsx  TelemetrySidebar.test.tsx  TraceUpload.test.tsx
gui/src/hooks/: useApi.ts  useConvergence.ts  useLiveStream.ts  useSimulationEvents.ts  useTelemetry.ts  useTelemetryStore.ts
gui/src/hooks/__tests__/: useApi.test.ts  useConvergence.test.ts  useTelemetry.integration.test.ts  useTelemetry.test.ts
gui/src/test/: setup.ts
gui/src/types/: telemetry.ts  ws.ts
gui/src/utils/: constants.ts  csv-export.ts  debug.ts  hash.ts  three.ts
gui/tests/: debug-ws.spec.ts  debug-ws2.spec.ts  e2e.spec.ts  simulate-buttons.spec.ts
infra/: cloud_bench.sh  cloud_collect.sh  cloud_lib.sh  cloud_provision.sh  main.tf  outputs.tf  remote_arena_reclaim_ab.sh  remote_bench.sh  remote_bisect.sh  remote_clamp_ablation.sh  remote_fastlane_ab.sh  remote_j6d_ab.sh  remote_j8_ab.sh  remote_realworkload.sh  variables.tf
shim/: .gitignore  Makefile  README.md  lohalloc_obs.c  lohalloc_obs.h  test_ring.c
