[workspace]
resolver = "2"
members = [
    "crates/lohalloc-core",
    "crates/lohalloc-alloc",
    "crates/lohalloc-server",
    "crates/lohalloc-example",
    "crates/lohalloc-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.74"

[workspace.dependencies]
lohalloc-core = { path = "crates/lohalloc-core" }
lohalloc-alloc = { path = "crates/lohalloc-alloc" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
debug = false

# Tests run under the custom global allocator; keep them panic-friendly.
[profile.test]
opt-level = 1
