[package]
name = "lohalloc-alloc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lohalloc Execution Plane: GlobalAlloc shim with Slab, Buddy, and System Fallback backends."

[dependencies]
lohalloc-core.workspace = true
libc = "0.2"
# CachePadded only (J5-B1): pads hot atomics to their own cache line (128 B
# on aarch64 — covers the prefetched line pair). default-features off keeps
# this no_std-compatible and pulls in nothing else; the crate is already in
# the workspace lockfile transitively, so this adds no new external code.
crossbeam-utils = { version = "0.8", default-features = false }

[features]
# When enabled, every alloc/free emits a `TelemetryCRecord` to a C-ABI sink
# installed by the demo binary (via LD_PRELOAD). Compiled away completely
# when disabled — no symbols, no branches, no atomic loads on the hot path.
telemetry-observer = []
# When enabled, the frozen-path per-backend route counters and the
# fallthrough counter are compiled in (for `LOHALLOC_DEBUG` model-routing
# diagnosis). OFF by default: every thread incrementing the same counter
# cache line on every frozen alloc is false sharing that hurt MT scaling.
# Always effectively on under `cfg(test)` so the counter tests still run.
route-metrics = []
