[package]
name = "lohalloc-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Phase 6 hypothesis-validation benchmarks: backend-favorable workloads, forced-routing and trained-routing validation, and cross-allocator comparison."
publish = false

[dependencies]
lohalloc-core.workspace = true
# NOTE: deliberately NO telemetry-observer feature. It was once enabled here,
# which compiled per-op observer hooks into every #[global_allocator] build
# this crate produces (2× now_ns() + pthread_self + size-class rescans per op,
# unconditional at runtime even when frozen and with no sink installed) —
# measured at ~60-90ns/op, making the Rust benchmark rows ~3× slower than the
# same allocator via lohalloc-cabi. Nothing in this crate uses the observer.
lohalloc-alloc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hdrhistogram = "7"
libc = "0.2"

# Mutually-exclusive global-allocator choices for the `comparison` bench
# binary (see src/global_alloc.rs). Not used by default — the default build
# leaves the process on the platform allocator.
tikv-jemallocator = { version = "0.7", optional = true }
mimalloc = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[features]
alloc-system = []
alloc-lohalloc = []
alloc-jemalloc = ["dep:tikv-jemallocator"]
alloc-mimalloc = ["dep:mimalloc"]
# Forwards the allocator's routing/fine-map introspection counters — gates
# the ctx_diag diagnostics in workloads.rs (run with:
# cargo test -p lohalloc-bench --lib --features route-metrics ctx_diag -- --ignored --nocapture)
route-metrics = ["lohalloc-alloc/route-metrics"]

[[bench]]
name = "backend_micro"
harness = false

[[bench]]
name = "hypothesis"
harness = false

[[bench]]
name = "inference_overhead"
harness = false

[[bench]]
name = "comparison"
harness = false

# Step-0 oracle-gap eval: measures the headroom a context-aware Decision
# Engine could capture on workloads whose per-site optimum changes at
# runtime. See the bench's module doc for the decision rule.
[[bench]]
name = "paradigm_gap"
harness = false

[[bench]]
name = "context_gap"
harness = false

[[bin]]
name = "latency_profile"
path = "src/bin/latency_profile.rs"

[[bin]]
name = "aggregate"
path = "src/bin/aggregate.rs"

# Rust entry in the native cross-allocator matrix: same CLI as
# bench/native/bench_main.c, allocator chosen at build time via the alloc-*
# features (built once per feature by bench/run_native.sh — see the bin's doc).
[[bin]]
name = "native_workload"
path = "src/bin/native_workload.rs"

# Diagnostic: dump a `.lohalloc` model's routing table for inspection.
[[bin]]
name = "model_dump"
path = "src/bin/model_dump.rs"
