[package]
name = "lohalloc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lohalloc control-plane server: Axum WebSocket telemetry stream (Phase 2/3)."

[lib]
path = "src/lib.rs"

[dependencies]
lohalloc-core.workspace = true
# Phase 2/3 dependencies land here. Kept minimal in Phase 1.
