[package]
name = "lohalloc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lohalloc control-plane server: Axum WebSocket telemetry stream + trace replay API (Phase 4)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "lohalloc-server"
path = "src/main.rs"

[dependencies]
lohalloc-core = { workspace = true, features = ["serde"] }
lohalloc-alloc = { workspace = true }
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
crossbeam-channel.workspace = true
futures-util = "0.3"
tower-http = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
